# alfred-workflow-gauth-rs

./: .gitignore  Cargo.toml  README.md  USAGE.md  bundle.sh
alfred/: info.plist
docs/superpowers/plans/: 2026-06-25-gauth-rs.md
docs/superpowers/specs/: 2026-06-25-gauth-rs-design.md
src/: account.rs  alfred.rs  cli.rs  config.rs  error.rs  main.rs  totp.rs
src/keepasshttp/: crypto.rs  mod.rs
src/store/: gauth.rs  macpass.rs  mod.rs
